--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     container_name: btc-web
     command: gunicorn --bind 0.0.0.0:8000 brian_tambara_com.wsgi --workers=4
     volumes:
-      - static_volume:/app/static
+      - static_volume:/app/www/static
       - media_volume:/app/media
     expose:
       - "8000"
@@ -14,7 +14,7 @@ services:
     container_name: btc-nginx
     restart: always
     volumes:
-      - static_volume:/app/static
+      - static_volume:/app/www/static
       - media_volume:/app/media
     ports:
       - "80:80"
