--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -17,7 +17,7 @@ services:
     container_name: btc-web
     command: gunicorn --bind 0.0.0.0:8000 brian_tambara_com.wsgi --workers=4
     volumes:
-      - static_volume:/app/static
+      - static_volume:/app/www/static
       - media_volume:/app/media
     expose:
       - "8000"
@@ -28,7 +28,7 @@ services:
     container_name: btc-nginx
     restart: always
     volumes:
-      - static_volume:/app/static
+      - static_volume:/app/www/static
       - media_volume:/app/media
     ports:
       - "80:80"
