--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,30 @@
 services:
+  postgres:
+    image: "postgres:15.4"
+    container_name: btc-postgres
+    ports:
+      - 5432:5432
+    volumes:
+      - db:/var/lib/postgresql/data
+    env_file:
+      - .env
   web:
     build:
       context: .
+    restart: always
     container_name: btc-web
-    command: gunicorn --bind 0.0.0.0:8000 brian_tambara_com.wsgi --workers=4
+    command: sh -c "python manage.py migrate &&
+              gunicorn --bind 0.0.0.0:8000 brian_tambara_com.wsgi --workers=4"
+    env_file:
+      - .env
     volumes:
       - static_volume:/app/www/static
       - media_volume:/app/media
     expose:
       - "8000"
+    depends_on:
+      - postgres
+      - nginx
   nginx:
     build: nginx
     container_name: btc-nginx
@@ -18,8 +34,7 @@ services:
       - media_volume:/app/media
     ports:
       - "80:80"
-    depends_on:
-      - web
 volumes:
   media_volume:
   static_volume:
+  db:
