--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -7,8 +7,8 @@ server {
         proxy_set_header Host $host;
         proxy_redirect off;
     }    location /static/ {
-        alias /app/www/static/;
+        alias /app/site_media/static/;
     }    location /media/ {
-        alias /app/static/;
+        alias /app/media/;
     }
 }
