--- a/setup/requirements.txt
+++ b/setup/requirements.txt
@@ -7,6 +7,10 @@
 asgiref==3.7.2
     # via django
 django==4.2.4
+    # via
+    #   -r requirements.in
+    #   django-vite
+django-vite==2.1.3
     # via -r requirements.in
 gunicorn==21.2.0
     # via -r requirements.in
