--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
       context: .
     restart: always
     container_name: btc-web
-    command: sh -c "python manage.py migrate &&
+    command: sh -c "python manage.py migrate && python manage.py collectstatic --clear --noinput &&
               gunicorn --bind 0.0.0.0:8000 brian_tambara_com.wsgi --workers=4"
     env_file:
       - .env
